--- a/detail-product.html
+++ b/detail-product.html
@@ -687,7 +687,7 @@
               btn.onclick = () => selectVariant(index);
 
               const vStock = v.stockItems ? v.stockItems.length : 0;
-              const stockStatus = vStock > 0 ? `<span class='text-emerald-400 text-[10px]'>${vStock} Ready</span>` : `<span class='text-red-400 text-[10px]'>Habis</span>`;
+              const stockStatus = vStock > 0 ? `<span class='text-emerald-400 text-[10px]'>${vStock} Tersedia</span>` : `<span class='text-red-400 text-[10px]'>Stok Habis</span>`;
 
               btn.innerHTML = `
                    <span>${v.name}</span>
