--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
             </div>
           </div>
 
-          <a href="#contact"
+          <a href="https://arufkuy.myr.id/portal"
             class="hidden md:inline-flex items-center gap-2 rounded-xl bg-gradient-to-r from-indigo-500 to-cyan-500 px-4 py-2 text-sm font-semibold text-white transition-all duration-300 hover:shadow-lg hover:shadow-cyan-500/40 shadow-lg shadow-indigo-500/30">
-            <span>Hubungi</span>
+            <span>Login</span>
           </a>
         </div>
 
@@ -536,3 +536,4 @@
 </body>
 
 </html>
+
