--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
       </div>
 
       <!-- Search & Filter -->
-      <div class="mt-6 flex flex-col md:flex-row gap-4">
+      <div class="mt-6 flex flex-row gap-3">
         <div class="relative flex-1">
           <svg class="w-5 h-5 text-slate-400 absolute left-3 top-3.5" fill="none" stroke="currentColor"
             viewBox="0 0 24 24">
@@ -330,10 +330,45 @@
               d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
           </svg>
           <input type="text" id="product-search" placeholder="Cari produk..."
-            class="w-full pl-10 pr-4 py-3 rounded-xl bg-white/5 border border-white/10 text-white placeholder:text-slate-500 focus:border-indigo-500 focus:outline-none transition">
+            class="w-full h-12 pl-10 pr-4 rounded-xl bg-white/5 border border-white/10 text-white placeholder:text-slate-500 focus:border-indigo-500 focus:outline-none transition">
         </div>
-        <div id="filter-tags" class="flex flex-wrap gap-2"></div>
+        <!-- Category Dropdown -->
+        <div class="relative z-20 flex-shrink-0">
+          <button onclick="toggleCategoryMenu()"
+            class="h-12 flex items-center gap-2 px-3 md:px-4 rounded-xl bg-white/5 border border-white/10 text-white hover:bg-white/10 transition whitespace-nowrap">
+            <svg class="w-4 h-4 text-slate-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M3 4a1 1 0 011-1h16a1 1 0 011 1v2.586a1 1 0 01-.293.707l-6.414 6.414a1 1 0 00-.293.707V17l-4 4v-6.586a1 1 0 00-.293-.707L3.293 7.293A1 1 0 013 6.586V4z">
+              </path>
+            </svg>
+            <span class="text-sm font-semibold hidden sm:inline">Kategori</span>
+            <svg class="w-4 h-4 text-slate-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
+            </svg>
+          </button>
+
+          <!-- Dropdown Menu -->
+          <div id="category-dropdown"
+            class="absolute top-full right-0 md:left-0 md:right-auto mt-2 w-72 rounded-2xl border border-white/10 bg-slate-900/95 backdrop-blur-xl shadow-2xl opacity-0 invisible transition-all duration-200 transform origin-top-right md:origin-top-left scale-95">
+            <div class="p-3">
+              <div class="relative">
+                <svg class="absolute left-3 top-1/2 -translate-y-1/2 w-4 h-4 text-slate-500" fill="none"
+                  stroke="currentColor" viewBox="0 0 24 24">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
+                </svg>
+                <input type="text" id="category-search" placeholder="Cari kategori..."
+                  oninput="filterCategoriesInDropdown()"
+                  class="w-full pl-10 pr-4 py-2 rounded-lg bg-white/5 border border-white/10 text-sm text-white placeholder:text-slate-500 focus:border-indigo-500 focus:outline-none transition">
+              </div>
+            </div>
+            <div id="category-list" class="max-h-80 overflow-y-auto custom-scrollbar px-2 pb-2">
+              <!-- Categories injected here -->
+            </div>
+          </div>
+        </div>
       </div>
+      <div id="active-filters" class="mt-3 flex flex-wrap gap-2 items-center"></div>
 
       <div id="products-grid" class="mt-8 grid gap-5 md:grid-cols-3">
         <!-- Loading State -->
@@ -469,152 +504,22 @@
           return;
         }
 
-        // Group products by section
-        const productsBySection = {};
-        const productsWithoutSection = [];
-
-        querySnapshot.forEach((doc) => {
-          const data = { id: doc.id, ...doc.data() };
-          const sectionId = data.sectionId;
-
-          if (sectionId) {
-            if (!productsBySection[sectionId]) {
-              productsBySection[sectionId] = [];
-            }
-            productsBySection[sectionId].push(data);
-          } else {
-            productsWithoutSection.push(data);
-          }
+        // Store globally for search/filter
+        allProducts = [];
+        querySnapshot.forEach(doc => {
+          allProducts.push({ id: doc.id, ...doc.data() });
         });
 
-        // Sort products within each section by orderInSection
-        Object.keys(productsBySection).forEach(sectionId => {
-          productsBySection[sectionId].sort((a, b) => (a.orderInSection || 0) - (b.orderInSection || 0));
-        });
+        // Store sections globally
+        allSections = sections;
 
-        // Sort products without section by orderInSection
-        productsWithoutSection.sort((a, b) => (a.orderInSection || 0) - (b.orderInSection || 0));
+        // Initial render in grouped view
+        renderGroupedProducts();
 
-        // Helper function to generate product card HTML
-        function generateProductCard(product) {
-          const data = product;
+        // Initialize category dropdown
+        initCategoryDropdown();
 
-          // Price logic
-          let priceHtml = '';
-          if (data.hasVariants && Array.isArray(data.variants) && data.variants.length > 0) {
-            const prices = data.variants.map(v => v.price).sort((a, b) => a - b);
-            const minPrice = prices[0];
-            const maxPrice = prices[prices.length - 1];
 
-            if (minPrice === maxPrice) {
-              priceHtml = `<p class="text-lg font-bold text-white">${formatPrice(minPrice)}</p>`;
-            } else {
-              priceHtml = `<p class="text-lg font-bold text-white">${formatPrice(minPrice)} - ${formatPrice(maxPrice)}</p>`;
-            }
-          } else {
-            priceHtml = `<p class="text-lg font-bold text-white">${formatPrice(data.price)}</p>`;
-            if (data.original_price && data.original_price > data.price) {
-              priceHtml = `
-                 <div class="flex items-end gap-2">
-                   <p class="text-lg font-bold text-white">${formatPrice(data.price)}</p>
-                   <p class="text-sm text-slate-500 line-through">${formatPrice(data.original_price)}</p>
-                 </div>
-               `;
-            }
-          }
-
-          const imgHtml = data.image
-            ? `<div class="aspect-video w-full rounded-2xl bg-slate-900 overflow-hidden mb-4"><img src="${data.image}" class="h-full w-full object-cover"></div>`
-            : `<div class="aspect-video w-full rounded-2xl bg-white/5 border border-white/5 flex items-center justify-center text-slate-500 mb-4 text-xs">No Image</div>`;
-
-          let tagsContent = '';
-          if (data.tag && typeof data.tag === 'string') {
-            const tagsArray = data.tag.split(',').map(t => t.trim()).filter(t => t);
-            tagsArray.forEach(tag => {
-              tagsContent += `<span class="bg-indigo-500/10 text-indigo-300 text-xs font-semibold px-2.5 py-1 rounded-full">${tag}</span>`;
-            });
-          }
-
-          let stockCount = 0;
-          if (data.hasVariants && Array.isArray(data.variants)) {
-            stockCount = data.variants.reduce((acc, v) => acc + (v.stockItems ? v.stockItems.length : 0), 0);
-          } else {
-            stockCount = Array.isArray(data.stockItems) ? data.stockItems.length : 0;
-          }
-
-          let stockHtml = '';
-          if (stockCount === 0) {
-            stockHtml = `<span class="text-xs font-semibold px-2.5 py-1 rounded-full bg-slate-700/50 text-slate-500">Sold Out</span>`;
-          } else if (stockCount <= 5) {
-            stockHtml = `<span class="text-xs font-semibold px-2.5 py-1 rounded-full bg-red-500/10 text-red-400">${stockCount} left</span>`;
-          } else if (stockCount <= 10) {
-            stockHtml = `<span class="text-xs font-semibold px-2.5 py-1 rounded-full bg-amber-500/10 text-amber-400">${stockCount} left</span>`;
-          } else {
-            stockHtml = `<span class="text-xs font-semibold px-2.5 py-1 rounded-full bg-emerald-500/10 text-emerald-400">In Stock</span>`;
-          }
-
-          const topInfoHtml = `
-            <div class="mb-2 flex justify-between items-start gap-2">
-              <div class="flex flex-wrap gap-2">
-                ${tagsContent}
-              </div>
-              ${stockHtml}
-            </div>
-          `;
-
-          return `
-            <a href="detail-product.html?id=${product.id}" class="block rounded-3xl border border-white/10 bg-white/5 p-5 hover:bg-white/10 transition-all duration-300 hover:border-white/20 hover:-translate-y-1 group">
-              <div class="flex flex-col h-full">
-                ${imgHtml}
-                ${topInfoHtml}
-                <h3 class="font-semibold text-lg group-hover:text-indigo-300 transition mt-1">${data.name}</h3>
-                <div class="mt-4 pt-4 border-t border-white/5">
-                  ${priceHtml}
-                </div>
-              </div>
-            </a>
-          `;
-        }
-
-        // Render products grouped by section
-        productsGrid.innerHTML = "";
-
-        // Render each section with its products
-        sections.forEach(section => {
-          const productsInSection = productsBySection[section.id];
-          if (!productsInSection || productsInSection.length === 0) return;
-
-          // Section header
-          const sectionHeader = `
-            <div class="col-span-full mt-8 mb-4">
-              <h2 class="text-2xl md:text-3xl font-bold text-white mb-2">${section.name}</h2>
-              ${section.description ? `<p class="text-sm text-slate-400">${section.description}</p>` : ''}
-            </div>
-          `;
-
-          productsGrid.innerHTML += sectionHeader;
-
-          // Render products in this section
-          productsInSection.forEach(product => {
-            productsGrid.innerHTML += generateProductCard(product);
-          });
-        });
-
-        // Render products without section
-        if (productsWithoutSection.length > 0) {
-          const unsectionedHeader = `
-            <div class="col-span-full mt-8 mb-4">
-              <h2 class="text-2xl md:text-3xl font-bold text-white mb-2">Lainnya</h2>
-              <p class="text-sm text-slate-400">Produk lainnya yang tersedia</p>
-            </div>
-          `;
-
-          productsGrid.innerHTML += unsectionedHeader;
-
-          productsWithoutSection.forEach(product => {
-            productsGrid.innerHTML += generateProductCard(product);
-          });
-        }
 
       } catch (error) {
         console.error("Error loading products:", error);
@@ -914,6 +819,7 @@
 
     // ========== SEARCH & FILTER SYSTEM ==========
     let allProducts = [];
+    let allSections = [];
     let activeFilters = [];
 
     function initSearchFilter() {
@@ -921,48 +827,111 @@
       if (searchInput) {
         searchInput.addEventListener('input', filterProducts);
       }
+
+      // Close category dropdown when clicking outside
+      document.addEventListener('click', (e) => {
+        const dropdown = document.getElementById('category-dropdown');
+        const button = document.querySelector('button[onclick="toggleCategoryMenu()"]');
+        if (dropdown && button && !dropdown.contains(e.target) && !button.contains(e.target)) {
+          window.closeCategoryMenu();
+        }
+      });
     }
 
-    function generateFilterTags() {
+    window.toggleCategoryMenu = function () {
+      const dropdown = document.getElementById('category-dropdown');
+      if (dropdown.classList.contains('invisible')) {
+        dropdown.classList.remove('invisible', 'opacity-0', 'scale-95');
+        document.getElementById('category-search').focus();
+      } else {
+        window.closeCategoryMenu();
+      }
+    }
+
+    window.closeCategoryMenu = function () {
+      const dropdown = document.getElementById('category-dropdown');
+      dropdown.classList.add('invisible', 'opacity-0', 'scale-95');
+    }
+
+    function initCategoryDropdown() {
       const tags = new Set();
       allProducts.forEach(p => {
         if (p.tag) p.tag.split(',').forEach(t => tags.add(t.trim()));
       });
 
-      const container = document.getElementById('filter-tags');
-      if (!container) return;
+      const listContainer = document.getElementById('category-list');
+      if (!listContainer) return;
 
-      container.innerHTML = '';
-      tags.forEach(tag => {
+      listContainer.innerHTML = '';
+      Array.from(tags).sort().forEach(tag => {
         if (!tag || tag === 'Normal') return;
+
         const btn = document.createElement('button');
-        btn.className = 'px-3 py-1.5 rounded-full text-xs border border-white/20 bg-white/5 hover:bg-white/10 transition';
-        btn.textContent = tag;
-        btn.dataset.tag = tag;
+        btn.className = 'category-item w-full flex items-center justify-between px-3 py-2.5 rounded-lg text-sm text-slate-300 hover:bg-white/5 hover:text-white transition group';
         btn.onclick = () => toggleFilter(tag);
-        container.appendChild(btn);
+        btn.innerHTML = `
+          <span class=\"font-medium\">${tag}</span>
+          <div class=\"w-5 h-5 rounded border-2 border-white/20 flex items-center justify-center group-hover:border-indigo-400 transition-all\">\n            <svg class=\"w-3.5 h-3.5 text-indigo-400 opacity-0 scale-50 transition-all duration-200\" fill=\"none\" stroke=\"currentColor\" viewBox=\"0 0 24 24\">\n              <path stroke-linecap=\"round\" stroke-linejoin=\"round\" stroke-width=\"3\" d=\"M5 13l4 4L19 7\"></path>\n            </svg>\n          </div>
+        `;
+        btn.dataset.tag = tag;
+        listContainer.appendChild(btn);
+      });
+    }
+
+    window.filterCategoriesInDropdown = function () {
+      const input = document.getElementById('category-search');
+      const filter = input.value.toLowerCase();
+      const items = document.querySelectorAll('.category-item');
+
+      items.forEach(item => {
+        const text = item.textContent.toLowerCase();
+        item.style.display = text.includes(filter) ? 'flex' : 'none';
       });
     }
 
     window.toggleFilter = function (tag) {
-      const btn = document.querySelector(`[data-tag="${tag}"]`);
-      if (!btn) return;
+      const btn = document.querySelector(`.category-item[data-tag=\"${tag}\"]`);
+      const checkIcon = btn ? btn.querySelector('svg') : null;
 
       if (activeFilters.includes(tag)) {
         activeFilters = activeFilters.filter(t => t !== tag);
-        btn.classList.remove('bg-indigo-500', 'border-indigo-500', 'text-white');
-        btn.classList.add('bg-white/5', 'border-white/20');
+        if (checkIcon) checkIcon.classList.add('opacity-0', 'scale-50');
       } else {
         activeFilters.push(tag);
-        btn.classList.add('bg-indigo-500', 'border-indigo-500', 'text-white');
-        btn.classList.remove('bg-white/5', 'border-white/20');
+        if (checkIcon) checkIcon.classList.remove('opacity-0', 'scale-50');
       }
+
+      updateActiveFiltersUI();
       filterProducts();
     };
+
+    function updateActiveFiltersUI() {
+      const container = document.getElementById('active-filters');
+      container.innerHTML = '';
+
+      activeFilters.forEach(tag => {
+        const badge = document.createElement('button');
+        badge.onclick = () => toggleFilter(tag);
+        badge.className = 'flex items-center gap-1.5 px-3 py-1.5 rounded-full text-xs font-semibold bg-gradient-to-r from-indigo-500 to-purple-500 text-white hover:from-indigo-600 hover:to-purple-600 transition-all shadow-lg shadow-indigo-500/20 animate-fade-in';
+        badge.innerHTML = `
+          <span>${tag}</span>
+          <svg class="w-3.5 h-3.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+          </svg>
+        `;
+        container.appendChild(badge);
+      });
+    }
 
     function filterProducts() {
       const searchInput = document.getElementById('product-search');
       const searchTerm = searchInput ? searchInput.value.toLowerCase() : '';
+
+      // RESTORE LOGIC: If no search term and no filters, show original grouped view
+      if (!searchTerm && activeFilters.length === 0) {
+        renderGroupedProducts();
+        return;
+      }
 
       let filtered = allProducts;
 
@@ -982,6 +951,71 @@
       }
 
       renderFilteredProducts(filtered);
+    }
+
+    function renderGroupedProducts() {
+      const productsGrid = document.getElementById('products-grid');
+      productsGrid.innerHTML = '';
+
+      if (allProducts.length === 0) {
+        productsGrid.innerHTML = '<div class="col-span-full text-center py-10 text-slate-400">Belum ada produk tersedia.</div>';
+        return;
+      }
+
+      // Group products by section
+      const productsBySection = {};
+      const productsWithoutSection = [];
+
+      allProducts.forEach((data) => {
+        const sectionId = data.sectionId;
+        if (sectionId) {
+          if (!productsBySection[sectionId]) {
+            productsBySection[sectionId] = [];
+          }
+          productsBySection[sectionId].push(data);
+        } else {
+          productsWithoutSection.push(data);
+        }
+      });
+
+      // Sort products within each section
+      Object.keys(productsBySection).forEach(sectionId => {
+        productsBySection[sectionId].sort((a, b) => (a.orderInSection || 0) - (b.orderInSection || 0));
+      });
+      productsWithoutSection.sort((a, b) => (a.orderInSection || 0) - (b.orderInSection || 0));
+
+      // Render each section with its products
+      allSections.forEach(section => {
+        const productsInSection = productsBySection[section.id];
+        if (!productsInSection || productsInSection.length === 0) return;
+
+        const sectionHeader = `
+          <div class="col-span-full mt-8 mb-4 animate-fade-in">
+            <h2 class="text-2xl md:text-3xl font-bold text-white mb-2">${section.name}</h2>
+            ${section.description ? `<p class="text-sm text-slate-400">${section.description}</p>` : ''}
+          </div>
+        `;
+        productsGrid.innerHTML += sectionHeader;
+
+        productsInSection.forEach(product => {
+          productsGrid.innerHTML += renderProductCard(product);
+        });
+      });
+
+      // Render products without section
+      if (productsWithoutSection.length > 0) {
+        const unsectionedHeader = `
+          <div class="col-span-full mt-8 mb-4 animate-fade-in">
+            <h2 class="text-2xl md:text-3xl font-bold text-white mb-2">Lainnya</h2>
+            <p class="text-sm text-slate-400">Produk lainnya yang tersedia</p>
+          </div>
+        `;
+        productsGrid.innerHTML += unsectionedHeader;
+
+        productsWithoutSection.forEach(product => {
+          productsGrid.innerHTML += renderProductCard(product);
+        });
+      }
     }
 
     function renderFilteredProducts(products) {
