--- a/index.html
+++ b/index.html
@@ -40,6 +40,25 @@
       -ms-overflow-style: none;
       scrollbar-width: none;
     }
+
+    /* Payment Carousel Animation */
+    @keyframes scroll-infinite {
+      0% {
+        transform: translateX(0);
+      }
+
+      100% {
+        transform: translateX(calc(-100% / 3));
+      }
+    }
+
+    .payment-carousel {
+      animation: scroll-infinite 45s linear infinite;
+    }
+
+    .payment-carousel-wrapper:hover .payment-carousel {
+      animation-play-state: paused;
+    }
   </style>
 </head>
 
@@ -299,6 +318,109 @@
                 Anda.
               </p>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Payment Methods -->
+    <section class="mx-auto max-w-6xl px-4 py-12">
+      <div class="text-center mb-8">
+        <h2 class="text-2xl font-bold tracking-tight md:text-3xl">Metode Pembayaran</h2>
+        <p class="mt-2 text-sm text-slate-300">Transaksi aman dengan berbagai pilihan pembayaran</p>
+      </div>
+
+      <!-- Carousel Container with padding for hover effect -->
+      <div class="payment-carousel-wrapper relative overflow-hidden py-4">
+        <div class="payment-carousel flex gap-6 md:gap-8">
+          <!-- First set of logos -->
+          <div
+            class="payment-logo-card flex-shrink-0 w-24 h-24 md:w-32 md:h-32 rounded-2xl border border-white/10 bg-white/5 backdrop-blur-sm p-4 flex items-center justify-center hover:bg-white/10 hover:border-white/20 transition-all duration-300 hover:scale-105">
+            <img src="payment-icons/qris.png" alt="BCA" class="w-full h-full object-contain" />
+          </div>
+          <div
+            class="payment-logo-card flex-shrink-0 w-24 h-24 md:w-32 md:h-32 rounded-2xl border border-white/10 bg-white/5 backdrop-blur-sm p-4 flex items-center justify-center hover:bg-white/10 hover:border-white/20 transition-all duration-300 hover:scale-105">
+            <img src="payment-icons/dana.png" alt="Mandiri" class="w-full h-full object-contain" />
+          </div>
+          <div
+            class="payment-logo-card flex-shrink-0 w-24 h-24 md:w-32 md:h-32 rounded-2xl border border-white/10 bg-white/5 backdrop-blur-sm p-4 flex items-center justify-center hover:bg-white/10 hover:border-white/20 transition-all duration-300 hover:scale-105">
+            <img src="payment-icons/gopay.png" alt="BRI" class="w-full h-full object-contain" />
+          </div>
+          <div
+            class="payment-logo-card flex-shrink-0 w-24 h-24 md:w-32 md:h-32 rounded-2xl border border-white/10 bg-white/5 backdrop-blur-sm p-4 flex items-center justify-center hover:bg-white/10 hover:border-white/20 transition-all duration-300 hover:scale-105">
+            <img src="payment-icons/shopeepay.png" alt="QRIS" class="w-full h-full object-contain" />
+          </div>
+          <div
+            class="payment-logo-card flex-shrink-0 w-24 h-24 md:w-32 md:h-32 rounded-2xl border border-white/10 bg-white/5 backdrop-blur-sm p-4 flex items-center justify-center hover:bg-white/10 hover:border-white/20 transition-all duration-300 hover:scale-105">
+            <img src="payment-icons/ovo.png" alt="GoPay" class="w-full h-full object-contain" />
+          </div>
+          <div
+            class="payment-logo-card flex-shrink-0 w-24 h-24 md:w-32 md:h-32 rounded-2xl border border-white/10 bg-white/5 backdrop-blur-sm p-4 flex items-center justify-center hover:bg-white/10 hover:border-white/20 transition-all duration-300 hover:scale-105">
+            <img src="payment-icons/indomaret.png" alt="OVO" class="w-full h-full object-contain" />
+          </div>
+          <div
+            class="payment-logo-card flex-shrink-0 w-24 h-24 md:w-32 md:h-32 rounded-2xl border border-white/10 bg-white/5 backdrop-blur-sm p-4 flex items-center justify-center hover:bg-white/10 hover:border-white/20 transition-all duration-300 hover:scale-105">
+            <img src="payment-icons/alfamart.png" alt="Dana" class="w-full h-full object-contain" />
+          </div>
+
+          <!-- Second set (duplicate for seamless scroll) -->
+          <div
+            class="payment-logo-card flex-shrink-0 w-24 h-24 md:w-32 md:h-32 rounded-2xl border border-white/10 bg-white/5 backdrop-blur-sm p-4 flex items-center justify-center hover:bg-white/10 hover:border-white/20 transition-all duration-300 hover:scale-105">
+            <img src="payment-icons/qris.png" alt="BCA" class="w-full h-full object-contain" />
+          </div>
+          <div
+            class="payment-logo-card flex-shrink-0 w-24 h-24 md:w-32 md:h-32 rounded-2xl border border-white/10 bg-white/5 backdrop-blur-sm p-4 flex items-center justify-center hover:bg-white/10 hover:border-white/20 transition-all duration-300 hover:scale-105">
+            <img src="payment-icons/dana.png" alt="Mandiri" class="w-full h-full object-contain" />
+          </div>
+          <div
+            class="payment-logo-card flex-shrink-0 w-24 h-24 md:w-32 md:h-32 rounded-2xl border border-white/10 bg-white/5 backdrop-blur-sm p-4 flex items-center justify-center hover:bg-white/10 hover:border-white/20 transition-all duration-300 hover:scale-105">
+            <img src="payment-icons/gopay.png" alt="BRI" class="w-full h-full object-contain" />
+          </div>
+          <div
+            class="payment-logo-card flex-shrink-0 w-24 h-24 md:w-32 md:h-32 rounded-2xl border border-white/10 bg-white/5 backdrop-blur-sm p-4 flex items-center justify-center hover:bg-white/10 hover:border-white/20 transition-all duration-300 hover:scale-105">
+            <img src="payment-icons/shopeepay.png" alt="QRIS" class="w-full h-full object-contain" />
+          </div>
+          <div
+            class="payment-logo-card flex-shrink-0 w-24 h-24 md:w-32 md:h-32 rounded-2xl border border-white/10 bg-white/5 backdrop-blur-sm p-4 flex items-center justify-center hover:bg-white/10 hover:border-white/20 transition-all duration-300 hover:scale-105">
+            <img src="payment-icons/ovo.png" alt="GoPay" class="w-full h-full object-contain" />
+          </div>
+          <div
+            class="payment-logo-card flex-shrink-0 w-24 h-24 md:w-32 md:h-32 rounded-2xl border border-white/10 bg-white/5 backdrop-blur-sm p-4 flex items-center justify-center hover:bg-white/10 hover:border-white/20 transition-all duration-300 hover:scale-105">
+            <img src="payment-icons/indomaret.png" alt="OVO" class="w-full h-full object-contain" />
+          </div>
+          <div
+            class="payment-logo-card flex-shrink-0 w-24 h-24 md:w-32 md:h-32 rounded-2xl border border-white/10 bg-white/5 backdrop-blur-sm p-4 flex items-center justify-center hover:bg-white/10 hover:border-white/20 transition-all duration-300 hover:scale-105">
+            <img src="payment-icons/alfamart.png" alt="Dana" class="w-full h-full object-contain" />
+          </div>
+
+          <!-- Third set (for extra smooth infinite scroll) -->
+          <div
+            class="payment-logo-card flex-shrink-0 w-24 h-24 md:w-32 md:h-32 rounded-2xl border border-white/10 bg-white/5 backdrop-blur-sm p-4 flex items-center justify-center hover:bg-white/10 hover:border-white/20 transition-all duration-300 hover:scale-105">
+            <img src="payment-icons/qris.png" alt="BCA" class="w-full h-full object-contain" />
+          </div>
+          <div
+            class="payment-logo-card flex-shrink-0 w-24 h-24 md:w-32 md:h-32 rounded-2xl border border-white/10 bg-white/5 backdrop-blur-sm p-4 flex items-center justify-center hover:bg-white/10 hover:border-white/20 transition-all duration-300 hover:scale-105">
+            <img src="payment-icons/dana.png" alt="Mandiri" class="w-full h-full object-contain" />
+          </div>
+          <div
+            class="payment-logo-card flex-shrink-0 w-24 h-24 md:w-32 md:h-32 rounded-2xl border border-white/10 bg-white/5 backdrop-blur-sm p-4 flex items-center justify-center hover:bg-white/10 hover:border-white/20 transition-all duration-300 hover:scale-105">
+            <img src="payment-icons/gopay.png" alt="BRI" class="w-full h-full object-contain" />
+          </div>
+          <div
+            class="payment-logo-card flex-shrink-0 w-24 h-24 md:w-32 md:h-32 rounded-2xl border border-white/10 bg-white/5 backdrop-blur-sm p-4 flex items-center justify-center hover:bg-white/10 hover:border-white/20 transition-all duration-300 hover:scale-105">
+            <img src="payment-icons/shopeepay.png" alt="QRIS" class="w-full h-full object-contain" />
+          </div>
+          <div
+            class="payment-logo-card flex-shrink-0 w-24 h-24 md:w-32 md:h-32 rounded-2xl border border-white/10 bg-white/5 backdrop-blur-sm p-4 flex items-center justify-center hover:bg-white/10 hover:border-white/20 transition-all duration-300 hover:scale-105">
+            <img src="payment-icons/ovo.png" alt="GoPay" class="w-full h-full object-contain" />
+          </div>
+          <div
+            class="payment-logo-card flex-shrink-0 w-24 h-24 md:w-32 md:h-32 rounded-2xl border border-white/10 bg-white/5 backdrop-blur-sm p-4 flex items-center justify-center hover:bg-white/10 hover:border-white/20 transition-all duration-300 hover:scale-105">
+            <img src="payment-icons/indomaret.png" alt="OVO" class="w-full h-full object-contain" />
+          </div>
+          <div
+            class="payment-logo-card flex-shrink-0 w-24 h-24 md:w-32 md:h-32 rounded-2xl border border-white/10 bg-white/5 backdrop-blur-sm p-4 flex items-center justify-center hover:bg-white/10 hover:border-white/20 transition-all duration-300 hover:scale-105">
+            <img src="payment-icons/alfamart.png" alt="Dana" class="w-full h-full object-contain" />
           </div>
         </div>
       </div>
