--- a/index.html
+++ b/index.html
@@ -312,10 +312,9 @@
             </div>
 
             <div class="mt-6 rounded-2xl border border-white/10 bg-slate-950/40 p-4">
-              <p class="text-sm font-semibold">Catatan</p>
+              <p class="text-sm font-semibold">Pesan</p>
               <p class="mt-2 text-sm text-slate-300 leading-relaxed">
-                Nikmati transaksi cepat dan aman bersama Arufkuy Digital Store, solusi terpercaya untuk produk digital
-                Anda.
+                Belanja produk digital dengan mudah dan aman, hanya di Arufkuy Digital Store.
               </p>
             </div>
           </div>
