--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
 
       <nav class="hidden items-center gap-6 text-sm text-slate-300 md:flex">
         <a href="index.html#products" class="hover:text-white transition">Produk</a>
-        <a href="order-guide.html.html" class="hover:text-white transition">Cara Order</a>
+        <a href="order-guide.html" class="hover:text-white transition">Cara Order</a>
         <a href="help-center.html" class="hover:text-white transition">FAQ</a>
-        <a href="contact.html.html" class="hover:text-white transition">Kontak</a>
+        <a href="contact.html" class="hover:text-white transition">Kontak</a>
       </nav>
 
       <div class="flex items-center gap-3">
@@ -1205,7 +1205,7 @@
       }
 
       return `
-        <a href="detail-product.html?id=${data.id}" class="block rounded-3xl border border-white/10 bg-white/5 p-5 hover:bg-white/10 transition-all duration-300 hover:border-white/20 hover:-translate-y-1 group">
+        <a href="detail-product?id=${data.id}" class="block rounded-3xl border border-white/10 bg-white/5 p-5 hover:bg-white/10 transition-all duration-300 hover:border-white/20 hover:-translate-y-1 group">
           <div class="flex flex-col h-full">
             ${imgHtml}
             <div class="mb-2 flex justify-between items-start gap-2">
@@ -1735,5 +1735,6 @@
     init();
   </script>
 </body>
+
 
 </html>
