--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
       </a>
 
       <nav class="hidden items-center gap-6 text-sm text-slate-300 md:flex">
-        <a href="index.html#products" class="hover:text-white transition">Produk</a>
-        <a href="order-guide.html" class="hover:text-white transition">Cara Order</a>
-        <a href="help-center.html" class="hover:text-white transition">FAQ</a>
-        <a href="contact.html" class="hover:text-white transition">Kontak</a>
+        <a href="#products" class="hover:text-white transition">Produk</a>
+        <a href="order-guide" class="hover:text-white transition">Cara Order</a>
+        <a href="help-center" class="hover:text-white transition">FAQ</a>
+        <a href="contact" class="hover:text-white transition">Kontak</a>
       </nav>
 
       <div class="flex items-center gap-3">
@@ -161,7 +161,7 @@
             </svg>
             Produk
           </a>
-          <a href="order-guide.html" onclick="closeMobileMenu()"
+          <a href="order-guide" onclick="closeMobileMenu()"
             class="flex items-center gap-3 rounded-xl px-4 py-3 text-sm font-medium text-slate-200 hover:bg-white/10 transition">
             <svg class="w-5 h-5 text-indigo-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -170,7 +170,7 @@
             </svg>
             Cara Order
           </a>
-          <a href="help-center.html" onclick="closeMobileMenu()"
+          <a href="help-center" onclick="closeMobileMenu()"
             class="flex items-center gap-3 rounded-xl px-4 py-3 text-sm font-medium text-slate-200 hover:bg-white/10 transition">
             <svg class="w-5 h-5 text-indigo-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -179,7 +179,7 @@
             </svg>
             FAQ
           </a>
-          <a href="contact.html" onclick="closeMobileMenu()"
+          <a href="contact" onclick="closeMobileMenu()"
             class="flex items-center gap-3 rounded-xl px-4 py-3 text-sm font-medium text-slate-200 hover:bg-white/10 transition">
             <svg class="w-5 h-5 text-indigo-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -1738,3 +1738,4 @@
 
 
 </html>
+
