--- a/detail-product.html
+++ b/detail-product.html
@@ -50,7 +50,7 @@
   <!-- Header -->
   <header class="sticky top-0 z-50 border-b border-white/10 bg-slate-950/70 backdrop-blur">
     <div class="mx-auto flex max-w-6xl items-center justify-between px-4 py-4">
-      <a href="index.html" class="flex items-center gap-3">
+      <a href="https://store.arufkuy.me" class="flex items-center gap-3">
         <div class="grid h-10 w-10 place-items-center rounded-xl bg-white/5 shadow-glow">
           <span class="text-lg font-bold text-indigo-300">A</span>
         </div>
@@ -61,10 +61,10 @@
       </a>
 
       <nav class="hidden items-center gap-6 text-sm text-slate-300 md:flex">
-        <a href="index.html#products" class="hover:text-white transition">Produk</a>
-        <a href="order-guide.html" class="hover:text-white transition">Cara Order</a>
-        <a href="help-center.html" class="hover:text-white transition">FAQ</a>
-        <a href="contact.html" class="hover:text-white transition">Kontak</a>
+        <a href="https://store.arufkuy.me/#products" class="hover:text-white transition">Produk</a>
+        <a href="order-guide" class="hover:text-white transition">Cara Order</a>
+        <a href="help-center" class="hover:text-white transition">FAQ</a>
+        <a href="contact" class="hover:text-white transition">Kontak</a>
       </nav>
 
       <div class="flex items-center gap-3">
@@ -130,7 +130,7 @@
 
         <!-- Navigation Links -->
         <div class="space-y-1 mb-4">
-          <a href="index.html#products" onclick="closeMobileMenu()"
+          <a href="https://store.arufkuy.me#products" onclick="closeMobileMenu()"
             class="flex items-center gap-3 rounded-xl px-4 py-3 text-sm font-medium text-slate-200 hover:bg-white/10 transition">
             <svg class="w-5 h-5 text-indigo-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -138,7 +138,7 @@
             </svg>
             Produk
           </a>
-          <a href="order-guide.html" onclick="closeMobileMenu()"
+          <a href="order-guide" onclick="closeMobileMenu()"
             class="flex items-center gap-3 rounded-xl px-4 py-3 text-sm font-medium text-slate-200 hover:bg-white/10 transition">
             <svg class="w-5 h-5 text-indigo-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -147,7 +147,7 @@
             </svg>
             Cara Order
           </a>
-          <a href="help-center.html" onclick="closeMobileMenu()"
+          <a href="help-center" onclick="closeMobileMenu()"
             class="flex items-center gap-3 rounded-xl px-4 py-3 text-sm font-medium text-slate-200 hover:bg-white/10 transition">
             <svg class="w-5 h-5 text-indigo-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -156,7 +156,7 @@
             </svg>
             FAQ
           </a>
-          <a href="contact.html" onclick="closeMobileMenu()"
+          <a href="contact" onclick="closeMobileMenu()"
             class="flex items-center gap-3 rounded-xl px-4 py-3 text-sm font-medium text-slate-200 hover:bg-white/10 transition">
             <svg class="w-5 h-5 text-indigo-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -228,7 +228,7 @@
 
       <!-- Breadcrumb -->
       <div class="mb-8 flex items-center gap-2 text-sm text-slate-400">
-        <a href="index.html" class="hover:text-white transition">Home</a>
+        <a href="https://store.arufkuy.me" class="hover:text-white transition">Home</a>
         <span>/</span>
         <span class="text-slate-200">Detail Product</span>
       </div>
@@ -645,7 +645,7 @@
     async function loadProduct() {
       if (!productId) {
         alert("Produk tidak ditemukan");
-        window.location.href = "index.html";
+        window.location.href = "https://store.arufkuy.me";
         return;
       }
 
@@ -738,7 +738,7 @@
           document.getElementById("product-container").classList.remove("hidden");
         } else {
           alert("Produk tidak ditemukan di database.");
-          window.location.href = "index.html";
+          window.location.href = "https://store.arufkuy.me/";
         }
       } catch (error) {
         console.error("Error fetching product:", error);
@@ -1476,5 +1476,6 @@
     init();
   </script>
 </body>
+
 
 </html>
