--- a/help-center.html
+++ b/help-center.html
@@ -67,7 +67,7 @@
       <nav class="hidden items-center gap-6 text-sm text-slate-300 md:flex">
         <a href="index.html#products" class="hover:text-white transition">Produk</a>
         <a href="order-guide.html" class="hover:text-white transition">Cara Order</a>
-        <a href="help-center.html" class="hover:text-white transition">FAQ</a>
+        <a href="help-center.html" class="hover:text-white transition">Pusat Bantuan</a>
         <a href="contact.html" class="hover:text-white transition">Kontak</a>
       </nav>
 
@@ -153,7 +153,7 @@
                 d="M8.228 9c.549-1.165 2.03-2 3.772-2 2.21 0 4 1.343 4 3 0 1.4-1.278 2.575-3.006 2.907-.542.104-.994.54-.994 1.093m0 3h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z">
               </path>
             </svg>
-            FAQ
+            Pusat Bantuan
           </a>
           <a href="contact.html" onclick="closeMobileMenu()"
             class="flex items-center gap-3 rounded-xl px-4 py-3 text-sm font-medium text-slate-200 hover:bg-white/10 transition">
@@ -371,6 +371,15 @@
           <a href="contact.html"
             class="inline-flex items-center gap-2 rounded-xl bg-white/10 px-6 py-3 text-sm font-semibold text-white hover:bg-white/20 transition">
             Hubungi Kami
+          </a>
+          <a href="https://tawk.to/chat/698a62f02fb5be1c3a2b2e1e/1jh294vin" target="_blank"
+            class="inline-flex items-center gap-2 rounded-xl bg-indigo-500/10 px-6 py-3 text-sm font-semibold text-indigo-400 hover:bg-indigo-500/20 transition">
+            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M8 10h.01M12 10h.01M16 10h.01M9 16H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-5l-5 5v-5z">
+              </path>
+            </svg>
+            Live Support
           </a>
           <a href="https://wa.me/6281346362526" target="_blank"
             class="inline-flex items-center gap-2 rounded-xl bg-emerald-500/10 px-6 py-3 text-sm font-semibold text-emerald-400 hover:bg-emerald-500/20 transition">
