--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
       </a>
 
       <nav class="hidden items-center gap-6 text-sm text-slate-300 md:flex">
-        <a href="#products" class="hover:text-white transition">Produk</a>
-        <a href="order-guide" class="hover:text-white transition">Cara Order</a>
-        <a href="help-center" class="hover:text-white transition">FAQ</a>
-        <a href="contact" class="hover:text-white transition">Kontak</a>
+        <a href="index.html#products" class="hover:text-white transition">Produk</a>
+        <a href="order-guide.html" class="hover:text-white transition">Cara Order</a>
+        <a href="help-center.html" class="hover:text-white transition">Pusat Bantuan</a>
+        <a href="contact.html" class="hover:text-white transition">Kontak</a>
       </nav>
 
       <div class="flex items-center gap-3">
@@ -161,7 +161,7 @@
             </svg>
             Produk
           </a>
-          <a href="order-guide" onclick="closeMobileMenu()"
+          <a href="order-guide.html" onclick="closeMobileMenu()"
             class="flex items-center gap-3 rounded-xl px-4 py-3 text-sm font-medium text-slate-200 hover:bg-white/10 transition">
             <svg class="w-5 h-5 text-indigo-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -170,16 +170,16 @@
             </svg>
             Cara Order
           </a>
-          <a href="help-center" onclick="closeMobileMenu()"
+          <a href="help-center.html" onclick="closeMobileMenu()"
             class="flex items-center gap-3 rounded-xl px-4 py-3 text-sm font-medium text-slate-200 hover:bg-white/10 transition">
             <svg class="w-5 h-5 text-indigo-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                 d="M8.228 9c.549-1.165 2.03-2 3.772-2 2.21 0 4 1.343 4 3 0 1.4-1.278 2.575-3.006 2.907-.542.104-.994.54-.994 1.093m0 3h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z">
               </path>
             </svg>
-            FAQ
+            Pusat Bantuan
           </a>
-          <a href="contact" onclick="closeMobileMenu()"
+          <a href="contact.html" onclick="closeMobileMenu()"
             class="flex items-center gap-3 rounded-xl px-4 py-3 text-sm font-medium text-slate-200 hover:bg-white/10 transition">
             <svg class="w-5 h-5 text-indigo-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -1205,7 +1205,7 @@
       }
 
       return `
-        <a href="detail-product?id=${data.id}" class="block rounded-3xl border border-white/10 bg-white/5 p-5 hover:bg-white/10 transition-all duration-300 hover:border-white/20 hover:-translate-y-1 group">
+        <a href="detail-product.html?id=${data.id}" class="block rounded-3xl border border-white/10 bg-white/5 p-5 hover:bg-white/10 transition-all duration-300 hover:border-white/20 hover:-translate-y-1 group">
           <div class="flex flex-col h-full">
             ${imgHtml}
             <div class="mb-2 flex justify-between items-start gap-2">
@@ -1735,21 +1735,18 @@
     init();
   </script>
   <!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/698a62f02fb5be1c3a2b2e1e/1jh294vin';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
+  <script type="text/javascript">
+    var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+    (function () {
+      var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+      s1.async = true;
+      s1.src = 'https://embed.tawk.to/698a62f02fb5be1c3a2b2e1e/1jh294vin';
+      s1.charset = 'UTF-8';
+      s1.setAttribute('crossorigin', '*');
+      s0.parentNode.insertBefore(s1, s0);
+    })();
+  </script>
+  <!--End of Tawk.to Script-->
 </body>
 
-
 </html>
-
-
