--- a/order-guide.html
+++ b/order-guide.html
@@ -67,7 +67,7 @@
       <nav class="hidden items-center gap-6 text-sm text-slate-300 md:flex">
         <a href="index.html#products" class="hover:text-white transition">Produk</a>
         <a href="order-guide.html" class="text-white font-medium transition">Cara Order</a>
-        <a href="index.html#faq" class="hover:text-white transition">FAQ</a>
+        <a href="index.html#faq" class="hover:text-white transition">Pusat Bantuan</a>
         <a href="contact.html" class="hover:text-white transition">Kontak</a>
       </nav>
 
@@ -153,7 +153,7 @@
                 d="M8.228 9c.549-1.165 2.03-2 3.772-2 2.21 0 4 1.343 4 3 0 1.4-1.278 2.575-3.006 2.907-.542.104-.994.54-.994 1.093m0 3h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z">
               </path>
             </svg>
-            FAQ
+            Pusat Bantuan
           </a>
           <a href="contact.html" onclick="closeMobileMenu()"
             class="flex items-center gap-3 rounded-xl px-4 py-3 text-sm font-medium text-slate-200 hover:bg-white/10 transition">
@@ -226,7 +226,8 @@
   <main class="flex-grow grid-bg">
     <section class="mx-auto max-w-6xl px-4 py-16 md:py-24">
       <div class="text-center max-w-2xl mx-auto mb-16">
-        <p class="inline-flex items-center gap-2 rounded-full border border-white/10 bg-white/5 px-4 py-2 text-xs text-slate-300 mb-6">
+        <p
+          class="inline-flex items-center gap-2 rounded-full border border-white/10 bg-white/5 px-4 py-2 text-xs text-slate-300 mb-6">
           <span class="h-2 w-2 rounded-full bg-emerald-400"></span>
           <span>Mudah • Cepat • Otomatis</span>
         </p>
@@ -234,19 +235,23 @@
           Cara <span class="text-indigo-300">Order</span>
         </h1>
         <p class="text-slate-300 text-lg leading-relaxed">
-          Ikuti langkah-langkah mudah berikut untuk membeli produk digital di Arufkuy Store. Proses otomatis 24/7 tanpa perlu menunggu admin.
+          Ikuti langkah-langkah mudah berikut untuk membeli produk digital di Arufkuy Store. Proses otomatis 24/7 tanpa
+          perlu menunggu admin.
         </p>
       </div>
 
       <!-- Steps -->
       <div class="relative">
         <!-- Connecting Line (Desktop) -->
-        <div class="hidden md:block absolute top-1/2 left-0 w-full h-0.5 bg-gradient-to-r from-transparent via-indigo-500/30 to-transparent -translate-y-1/2 z-0"></div>
+        <div
+          class="hidden md:block absolute top-1/2 left-0 w-full h-0.5 bg-gradient-to-r from-transparent via-indigo-500/30 to-transparent -translate-y-1/2 z-0">
+        </div>
 
         <div class="grid gap-8 md:grid-cols-4 relative z-10">
           <!-- Step 1 -->
           <div class="group relative">
-            <div class="mx-auto flex h-16 w-16 items-center justify-center rounded-2xl border border-white/10 bg-slate-900 shadow-glow transition-transform duration-300 group-hover:scale-110 group-hover:border-indigo-500/50">
+            <div
+              class="mx-auto flex h-16 w-16 items-center justify-center rounded-2xl border border-white/10 bg-slate-900 shadow-glow transition-transform duration-300 group-hover:scale-110 group-hover:border-indigo-500/50">
               <span class="text-2xl font-bold text-indigo-400">1</span>
             </div>
             <div class="mt-6 text-center">
@@ -259,7 +264,8 @@
 
           <!-- Step 2 -->
           <div class="group relative">
-            <div class="mx-auto flex h-16 w-16 items-center justify-center rounded-2xl border border-white/10 bg-slate-900 shadow-glow transition-transform duration-300 group-hover:scale-110 group-hover:border-indigo-500/50">
+            <div
+              class="mx-auto flex h-16 w-16 items-center justify-center rounded-2xl border border-white/10 bg-slate-900 shadow-glow transition-transform duration-300 group-hover:scale-110 group-hover:border-indigo-500/50">
               <span class="text-2xl font-bold text-indigo-400">2</span>
             </div>
             <div class="mt-6 text-center">
@@ -272,7 +278,8 @@
 
           <!-- Step 3 -->
           <div class="group relative">
-            <div class="mx-auto flex h-16 w-16 items-center justify-center rounded-2xl border border-white/10 bg-slate-900 shadow-glow transition-transform duration-300 group-hover:scale-110 group-hover:border-indigo-500/50">
+            <div
+              class="mx-auto flex h-16 w-16 items-center justify-center rounded-2xl border border-white/10 bg-slate-900 shadow-glow transition-transform duration-300 group-hover:scale-110 group-hover:border-indigo-500/50">
               <span class="text-2xl font-bold text-indigo-400">3</span>
             </div>
             <div class="mt-6 text-center">
@@ -285,7 +292,8 @@
 
           <!-- Step 4 -->
           <div class="group relative">
-            <div class="mx-auto flex h-16 w-16 items-center justify-center rounded-2xl border border-white/10 bg-slate-900 shadow-glow transition-transform duration-300 group-hover:scale-110 group-hover:border-indigo-500/50">
+            <div
+              class="mx-auto flex h-16 w-16 items-center justify-center rounded-2xl border border-white/10 bg-slate-900 shadow-glow transition-transform duration-300 group-hover:scale-110 group-hover:border-indigo-500/50">
               <span class="text-2xl font-bold text-indigo-400">4</span>
             </div>
             <div class="mt-6 text-center">
@@ -301,7 +309,8 @@
       <!-- Payment Methods -->
       <div class="mt-24 rounded-3xl border border-white/10 bg-white/5 p-8 md:p-12 text-center">
         <h2 class="text-2xl font-bold mb-8">Metode Pembayaran</h2>
-        <div class="flex flex-wrap justify-center gap-6 md:gap-10 opacity-70 grayscale transition-all duration-500 hover:grayscale-0 hover:opacity-100">
+        <div
+          class="flex flex-wrap justify-center gap-6 md:gap-10 opacity-70 grayscale transition-all duration-500 hover:grayscale-0 hover:opacity-100">
           <!-- Placeholder Icons for Payment Methods -->
           <div class="flex items-center gap-2">
             <div class="h-10 w-10 rounded-full bg-white/10"></div>
@@ -331,9 +340,12 @@
 
       <!-- CTA -->
       <div class="mt-16 text-center">
-        <a href="index.html#products" class="inline-flex items-center justify-center gap-2 rounded-2xl bg-gradient-to-r from-indigo-500 to-cyan-500 px-8 py-4 text-base font-bold text-white shadow-glow transition-all duration-300 hover:scale-105 hover:shadow-xl hover:shadow-cyan-500/30">
+        <a href="index.html#products"
+          class="inline-flex items-center justify-center gap-2 rounded-2xl bg-gradient-to-r from-indigo-500 to-cyan-500 px-8 py-4 text-base font-bold text-white shadow-glow transition-all duration-300 hover:scale-105 hover:shadow-xl hover:shadow-cyan-500/30">
           <span>Mulai Belanja Sekarang</span>
-          <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
+          <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path>
+          </svg>
         </a>
       </div>
     </section>
@@ -348,20 +360,26 @@
           <p class="mt-1">© <span id="year"></span> • All rights reserved.</p>
         </div>
         <div class="flex items-center gap-5">
-            <a href="https://discord.gg/3sDGqtZBcW" class="text-slate-400 hover:text-white transition">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-discord" viewBox="0 0 16 16">
-  <path d="M13.545 2.907a13.2 13.2 0 0 0-3.257-1.011.05.05 0 0 0-.052.025c-.141.25-.297.577-.406.833a12.2 12.2 0 0 0-3.658 0 8 8 0 0 0-.412-.833.05.05 0 0 0-.052-.025c-1.125.194-2.22.534-3.257 1.011a.04.04 0 0 0-.021.018C.356 6.024-.213 9.047.066 12.032q.003.022.021.037a13.3 13.3 0 0 0 3.995 2.02.05.05 0 0 0 .056-.019q.463-.63.818-1.329a.05.05 0 0 0-.01-.059l-.018-.011a9 9 0 0 1-1.248-.595.05.05 0 0 1-.02-.066l.015-.019q.127-.095.248-.195a.05.05 0 0 1 .051-.007c2.619 1.196 5.454 1.196 8.041 0a.05.05 0 0 1 .053.007q.121.1.248.195a.05.05 0 0 1-.004.085 8 8 0 0 1-1.249.594.05.05 0 0 0-.03.03.05.05 0 0 0 .003.041c.24.465.515.909.817 1.329a.05.05 0 0 0 .056.019 13.2 13.2 0 0 0 4.001-2.02.05.05 0 0 0 .021-.037c.334-3.451-.559-6.449-2.366-9.106a.03.03 0 0 0-.02-.019m-8.198 7.307c-.789 0-1.438-.724-1.438-1.612s.637-1.613 1.438-1.613c.807 0 1.45.73 1.438 1.613 0 .888-.637 1.612-1.438 1.612m5.316 0c-.788 0-1.438-.724-1.438-1.612s.637-1.613 1.438-1.613c.807 0 1.451.73 1.438 1.613 0 .888-.631 1.612-1.438 1.612"/>
-</svg>
+          <a href="https://discord.gg/3sDGqtZBcW" class="text-slate-400 hover:text-white transition">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-discord"
+              viewBox="0 0 16 16">
+              <path
+                d="M13.545 2.907a13.2 13.2 0 0 0-3.257-1.011.05.05 0 0 0-.052.025c-.141.25-.297.577-.406.833a12.2 12.2 0 0 0-3.658 0 8 8 0 0 0-.412-.833.05.05 0 0 0-.052-.025c-1.125.194-2.22.534-3.257 1.011a.04.04 0 0 0-.021.018C.356 6.024-.213 9.047.066 12.032q.003.022.021.037a13.3 13.3 0 0 0 3.995 2.02.05.05 0 0 0 .056-.019q.463-.63.818-1.329a.05.05 0 0 0-.01-.059l-.018-.011a9 9 0 0 1-1.248-.595.05.05 0 0 1-.02-.066l.015-.019q.127-.095.248-.195a.05.05 0 0 1 .051-.007c2.619 1.196 5.454 1.196 8.041 0a.05.05 0 0 1 .053.007q.121.1.248.195a.05.05 0 0 1-.004.085 8 8 0 0 1-1.249.594.05.05 0 0 0-.03.03.05.05 0 0 0 .003.041c.24.465.515.909.817 1.329a.05.05 0 0 0 .056.019 13.2 13.2 0 0 0 4.001-2.02.05.05 0 0 0 .021-.037c.334-3.451-.559-6.449-2.366-9.106a.03.03 0 0 0-.02-.019m-8.198 7.307c-.789 0-1.438-.724-1.438-1.612s.637-1.613 1.438-1.613c.807 0 1.45.73 1.438 1.613 0 .888-.637 1.612-1.438 1.612m5.316 0c-.788 0-1.438-.724-1.438-1.612s.637-1.613 1.438-1.613c.807 0 1.451.73 1.438 1.613 0 .888-.631 1.612-1.438 1.612" />
+            </svg>
           </a>
           <a href="https://www.instagram.com/arufkuystore" class="text-slate-400 hover:text-white transition">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
-  <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"/>
-</svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram"
+              viewBox="0 0 16 16">
+              <path
+                d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334" />
+            </svg>
           </a>
           <a href="https://www.tiktok.com/@arufkuy.digital.store" class="text-slate-400 hover:text-white transition">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tiktok" viewBox="0 0 16 16">
-  <path d="M9 0h1.98c.144.715.54 1.617 1.235 2.512C12.895 3.389 13.797 4 15 4v2c-1.753 0-3.07-.814-4-1.829V11a5 5 0 1 1-5-5v2a3 3 0 1 0 3 3z"/>
-</svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tiktok"
+              viewBox="0 0 16 16">
+              <path
+                d="M9 0h1.98c.144.715.54 1.617 1.235 2.512C12.895 3.389 13.797 4 15 4v2c-1.753 0-3.07-.814-4-1.829V11a5 5 0 1 1-5-5v2a3 3 0 1 0 3 3z" />
+            </svg>
           </a>
         </div>
       </div>
