--- a/detail-product.html
+++ b/detail-product.html
@@ -855,7 +855,7 @@
           email: email,
           mobile: phone,
           description: description,
-          redirectUrl: `${window.location.origin}/detail-order.html?orderId=${orderId}&ref={invoiceId}`,
+          redirectUrl: `${window.location.origin}/detail-order.html?orderId=${orderId}`,
           items: [
             {
               name: itemName,
